@@ -1,8 +1,8 @@
 ---
 title: "Build Systems & Dependency Setup"
 icon: "lucide/wrench"
-description: "Configure Gradle (Kotlin/Groovy) and Maven build automation with Java 21+ toolchains, Shadow JAR bundling, and LITIENGINE dependencies."
-keywords: ["LITIENGINE build", "Gradle Kotlin DSL", "build.gradle.kts", "build.gradle", "pom.xml", "Java 21 toolchain", "shadowjar"]
+description: "Configure Gradle (Kotlin/Groovy) and Maven build automation with Java 25+ toolchains, Shadow JAR bundling, and LITIENGINE dependencies."
+keywords: ["LITIENGINE build", "Gradle Kotlin DSL", "build.gradle.kts", "build.gradle", "pom.xml", "Java 25 toolchain", "shadowjar"]
 tags: ["gradle", "maven", "build", "dependencies", "shadowjar", "toolchain"]
 ---
 
@@ -14,7 +14,7 @@ LITIENGINE is distributed via **Maven Central** and is fully compatible with mod
 
 ---
 
-## Starter Build Configurations (Java 21+)
+## Starter Build Configurations (Java 25+)
 
 Select your preferred build tool below for a complete, production-ready configuration:
 
@@ -36,17 +36,18 @@ Select your preferred build tool below for a complete, production-ready configur
 
     java {
         toolchain {
-            languageVersion.set(JavaLanguageVersion.of(21))
+            languageVersion.set(JavaLanguageVersion.of({{ java_version }}))
         }
     }
 
     dependencies {
-        implementation("de.gurkenlabs:litiengine:0.11.1")
+        implementation("de.gurkenlabs:litiengine:{{ version }}")
         testImplementation("org.junit.jupiter:junit-jupiter:5.11.4")
     }
 
     application {
         mainClass.set("com.example.game.Program")
+        applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
     }
 
     tasks.shadowJar {
@@ -75,17 +76,18 @@ Select your preferred build tool below for a complete, production-ready configur
 
     java {
         toolchain {
-            languageVersion = JavaLanguageVersion.of(21)
+            languageVersion = JavaLanguageVersion.of({{ java_version }})
         }
     }
 
     dependencies {
-        implementation 'de.gurkenlabs:litiengine:0.11.1'
+        implementation 'de.gurkenlabs:litiengine:{{ version }}'
         testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
     }
 
     application {
         mainClass = 'com.example.game.Program'
+        applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
     }
 
     tasks.shadowJar {
@@ -109,8 +111,8 @@ Select your preferred build tool below for a complete, production-ready configur
         <version>1.0.0</version>
 
         <properties>
-            <maven.compiler.source>21</maven.compiler.source>
-            <maven.compiler.target>21</maven.compiler.target>
+            <maven.compiler.source>{{ java_version }}</maven.compiler.source>
+            <maven.compiler.target>{{ java_version }}</maven.compiler.target>
             <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         </properties>
 
@@ -118,7 +120,7 @@ Select your preferred build tool below for a complete, production-ready configur
             <dependency>
                 <groupId>de.gurkenlabs</groupId>
                 <artifactId>litiengine</artifactId>
-                <version>0.11.1</version>
+                <version>{{ version }}</version>
             </dependency>
         </dependencies>
 
@@ -169,7 +171,7 @@ Select your preferred build tool below for a complete, production-ready configur
 
     1. Select **File &rarr; Import... &rarr; Existing Gradle Project**.
     2. Browse to your project directory and click **Finish**.
-    3. Ensure your Workspace Installed JRE is configured for **Java 21+**.
+    3. Ensure your Workspace Installed JRE is configured for **Java 25+**.
 
 - :material-microsoft-visual-studio-code:{ .lg .middle } **VS Code**
 
@@ -186,13 +188,13 @@ Select your preferred build tool below for a complete, production-ready configur
 
 <div class="grid cards" markdown>
 
-- :material-download-outline:{ .lg .middle } **[Get LITIENGINE](/getting-started/get-litiengine/)**
+- :material-download-outline:{ .lg .middle } **[Get LITIENGINE](get-litiengine.md)**
 
     ---
 
     Snapshot releases, JitPack builds, and manual JAR downloads.
 
-- :material-play-box-outline:{ .lg .middle } **[Deployment & Packaging](/deployment/)**
+- :material-play-box-outline:{ .lg .middle } **[Deployment & Packaging](../deployment.md)**
 
     ---
 
